<resources>
    <string name="app_name">ZUP Trips</string>
    <string name="specials">Specials</string>
    <string name="brasil">Brasil</string>
    <string name="banner_of_packages">Banner of packages</string>
    <string name="make_payment">MAKE PAYMENT</string>
    <string name="actual_price">Current price:</string>
    <string name="local_image">Local image</string>
    <string name="text_information_payment">Enter the information of the credit card you want to use for payment</string>
    <string name="purchase_amount">Purchase amount:</string>
    <string name="card_number">Card number</string>
    <string name="purchase_finish">Purchase finish</string>
    <string name="mask_card_name">abcdefghijklmnopqrstuvwxyvABCDEFGHIJKLMNOPQRTUWXYZ\u0020</string>
</resources>