<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PaymentActivity">

    <TextView
        android:id="@+id/payment_information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_information_payment" />

    <TextView
        android:id="@+id/payment_purchase_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/purchase_amount"
        app:layout_constraintTop_toBottomOf="@id/payment_information"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/payment_purchase_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textColor="@android:color/holo_green_dark"
        tools:text="421,50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_purchase_amount"
        />

    <EditText
        android:id="@+id/payment_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/card_number"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_purchase_price" />

    <EditText
        android:id="@+id/payment_card_month"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="MM"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/payment_card_number"
        app:layout_constraintTop_toBottomOf="@+id/payment_card_number" />

    <EditText
        android:id="@+id/payment_card_year"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="AA"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/payment_card_month"
        app:layout_constraintStart_toEndOf="@id/payment_card_month" />
    <EditText
        android:id="@+id/payment_card_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="CVC"
        app:layout_constraintBottom_toBottomOf="@+id/payment_card_year"
        app:layout_constraintEnd_toEndOf="@id/payment_card_number"
        android:gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito" />

    <EditText
        android:id="@+id/payment_card_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:digits="@string/mask_card_name"
        android:gravity="start"
        android:hint="Name in card"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_card_cvc" />

    <Button
        android:id="@+id/payment_purchase_finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_radius_orange"
        android:text="@string/purchase_finish"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@id/payment_card_name"
        app:layout_constraintStart_toStartOf="@id/payment_card_name"
        app:layout_constraintTop_toBottomOf="@id/payment_card_name" />



</androidx.constraintlayout.widget.ConstraintLayout>